# mf

./: Cargo.toml  README.md
algebra/: Cargo.toml
algebra/src/: complex.rs  enhanced_array.rs  enhanced_container.rs  enhanced_vec.rs  finite.rs  lib.rs  polynomial.rs  quaternion.rs  spline.rs  unit_vector.rs  utils.rs  vector.rs  vector_nalgebra_conv.rs  vector_view.rs  vector_view_mut.rs
algebra/src/utils/: array.rs  kronecker_delta.rs  methods4into_iter.rs  nchoosek.rs  ratio_type.rs  scalar_mul.rs  special_functions.rs  vec.rs
algebra_derive/: Cargo.toml
algebra_derive/src/: lib.rs
algebra_traits/: Cargo.toml
algebra_traits/src/: group.rs  lib.rs  linear_algebra.rs  metric.rs  nalgebra_impl.rs  operators.rs  parameters.rs  partial_ord.rs  scalar.rs  set_theory.rs
algebra_traits/src/group/: group.rs  lie_algebra.rs  semi_group.rs
algebra_traits/src/linear_algebra/: affine_basis.rs  affine_coordinates.rs  cross_product.rs  scalar_product.rs  torsor.rs  vector.rs  vectorspace.rs
algebra_traits/src/metric/: distance.rs  metric_torsor.rs  norm.rs  norm_squared.rs  tolerance.rs
algebra_traits/src/operators/: basic.rs  closed.rs  conjugate.rs  div_by_small_natural.rs  error.rs  muliu_powiu.rs  solve.rs  try_arithmetic.rs  unary.rs
algebra_traits/src/parameters/: parameters.rs  parameters1.rs
algebra_traits/src/partial_ord/: interval.rs  max_and_min_binary.rs  max_and_min_iter.rs  nonnegative.rs  signed.rs
algebra_traits/src/scalar/: consts.rs  field.rs  impl_real_number.rs  one.rs  scalar_mul.rs  trigonometric_functions.rs  zero.rs
algebra_traits/src/set_theory/: complement.rs  const_element.rs
container/: Cargo.toml
container/src/: combinations.rs  lib.rs  view.rs  view_mut.rs
container/src/combinations/: col_row_view.rs  col_view.rs  col_view_mut.rs  concatenated.rs  cropped.rs  jit_sized.rs  multid_slice.rs  multid_slice_view.rs  multid_slice_view_mut.rs  repeated.rs  row_view.rs  sparse.rs  sparse_view.rs  without.rs  without_view.rs  without_view_mut.rs
container_traits/: Cargo.toml
container_traits/src/: array_op.rs  container.rs  error.rs  for_any.rs  for_dyn_and_stat.rs  for_dynamic.rs  for_static.rs  lib.rs  linear_container.rs  nalgebra_impls.rs  vec_op.rs
container_traits/src/container/: combinations.rs  container.rs  container_construct.rs  container_mut.rs  container_try_construct.rs  container_view.rs  container_view_mut.rs  dynamically_sized.rs  from_into.rs  index.rs  index_iterator.rs  index_trait.rs  index_type.rs  iter_iterator.rs  iter_mut_iterator.rs  sparse.rs
container_traits/src/error/: container_construct_error.rs  dimension_mismatch_error.rs  empty_error.rs  index_out_of_bounds_error.rs  lower_bound_upper_bound_error.rs  size_len_error.rs
container_traits/src/for_any/: any_from_vec.rs  as_x_slice.rs  change_dim.rs  change_len.rs  change_t.rs  enumerate.rs  first.rs  from_inner.rs  get.rs  get_mut.rs  inner.rs  into_inner.rs  into_product.rs  into_sum.rs  into_vec.rs  is_empty.rs  item_t.rs  iter.rs  last.rs  map.rs  new_unchecked.rs  parameters.rs  reverse.rs  try_from_vec.rs  try_into_element.rs  try_map.rs  try_map_i.rs
container_traits/src/for_dyn_and_stat/: any_from_iterator.rs  any_from_parameters.rs  any_parameters.rs  from_element.rs  from_fn.rs  len.rs  ndofs.rs  oct_size_len.rs  rebind.rs  rebind_nalgebra_scalar.rs  size_len.rs  size_len_from_oref.rs  standard_basis.rs  try_accept.rs  try_from_fn.rs  try_into_array.rs  try_put_at.rs  zeros.rs
container_traits/src/for_dynamic/: concat.rs  empty.rs  from_array.rs  from_vec.rs  one_element.rs  pad_zeros.rs  pop.rs  push.rs  try_insert.rs  try_remove.rs
container_traits/src/for_static/: from_element.rs  from_fn.rs  into_array.rs  ndofs.rs  size_len.rs  standard_basis.rs  try_accept.rs  try_from_fn.rs  try_from_iterator.rs  try_from_parameters.rs  try_from_vec.rs  try_parameters.rs  try_put_at.rs  xyz.rs
container_traits/src/linear_container/: concatenated.rs  display.rs  linear_container.rs  linear_container_construct.rs  linear_container_construct_error.rs  linear_container_dynamic.rs  linear_container_mut.rs  linear_container_try_construct.rs  linear_container_view.rs  linear_container_view_mut.rs
container_traits/src/nalgebra_impls/: for_any.rs  for_dmatrix.rs  for_dvector.rs  for_omatrix.rs  for_smatrix.rs  for_svector.rs
geometry/: Cargo.toml
geometry/src/: geodesic.rs  lib.rs  lie_spline.rs  primitives.rs  tangent_bundle.rs  trafos.rs
geometry/src/primitives/: abstract_vector.rs  arrow.rs  frame.rs  line.rs  plane.rs  point.rs  ray.rs  triangle.rs  unit_vector.rs  vector.rs
geometry/src/trafos/: affine.rs  linear.rs  log_se.rs  rotation3_point.rs  rotation3_vector.rs  screw_motion.rs  special_euclidean.rs  translation.rs  tse3.rs
geometry_traits/: Cargo.toml
geometry_traits/src/: geometric.rs  lib.rs  lie_group.rs  logable_manfold.rs  manifold.rs  submanifold.rs  tangent_bundle.rs  transformation.rs
matrix/: Cargo.toml
matrix/src/: lib.rs  macros.rs  matrices.rs  row_col.rs
matrix/src/matrices/: diag_matrix_generic.rs  matrix.rs  matrix_dyn.rs  matrix_generic.rs  mult_id.rs  wrapped.rs
matrix/src/row_col/: impl_display.rs  impl_row_col.rs  matrix_col_dyn.rs  matrix_col_stat.rs  matrix_row_dyn.rs  (+1 more)
matrix_derive/: Cargo.toml
matrix_derive/src/: lib.rs
matrix_traits/: Cargo.toml
matrix_traits/src/: error.rs  extensions.rs  lib.rs  matrices.rs  matrix_operations.rs  nalgebra_impl.rs  products.rs  row_col.rs
optimization/: Cargo.toml
optimization/src/: error.rs  finite_difference.rs  fixpoint_iteration.rs  fsolve.rs  fsolve_regularized.rs  jacobian.rs  least_squares.rs  lib.rs  options.rs  problem.rs  riemannian_newton.rs
phys_units/: Cargo.toml
phys_units/src/: angulars.rs  duration.rs  generic_physical_quantity.rs  lengths.rs  lib.rs  physical_quantity.rs  quantity.rs  unit_trait.rs
playground/: Cargo.toml
playground/src/: main.rs  view_architecture.rs
vector_and_affine_spaces/: Cargo.toml
vector_and_affine_spaces/src/: affine_basis.rs  affine_coordinates.rs  affine_sub_space.rs  basis.rs  lib.rs  sub_space.rs
(+192 files in other folders)
