[package]
authors = ["Markus Sprecher"]
description = "definitions and interfaces for crate algebra"
keywords = ["group", "scalar", "operators", "linear algebra", "vectorspace"]
name = "algebra_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["lib"]

[dependencies]

algebra_derive =   { path = "../algebra_derive" }
container_derive = { path = "../container_derive" }
container_traits = { path = "../container_traits" }
utils =            { path = "../utils"}

derive_more = { version = "1.0.0", features = ["full"]}
either = "1.13.0"
num-traits= "0.2.15"
paste =     "1.0.14"
strum =     "0.26.3"
thiserror = "1.0.58"


# optional
nalgebra = { version = "0.33",    optional = true }
num=       { version = "0.4.3",   optional = true }
serde =    { version = "1.0.197", optional = true , features = ["derive"] }




[features]
num_support =      ["dep:num"]
nalgebra_support = ["dep:nalgebra"]
serde_support =    ["dep:serde"]
