[package]
authors = ["Markus Sprecher"]
description = "definitions and interfaces for crate algebra"
keywords = ["group", "scalar", "operators", "linear algebra", "vectorspace"]
name = "algebra_traits"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["lib"]

[dependencies]

algebra_derive =   { path = "../algebra_derive" }
container        = { path = "../container" }
container_derive = { path = "../container_derive" }
container_traits = { path = "../container_traits" }
utils =            { path = "../utils"}

derive_more = { version = "2.0.1", features = ["full"]}
either = "1.13.0"
generic-array = "1.3.5"
num-traits= "0.2.15"
paste =     "1.0.15"
strum =     "0.28.0"
thiserror = "2.0.12"


# optional
nalgebra = { version = "0.34",    optional = true }
num=       { version = "0.4.3",   optional = true }
serde =    { version = "1.0.197", optional = true , features = ["derive"] }




[features]
num_support =      ["dep:num"]
nalgebra_support = ["dep:nalgebra"]
serde_support =    ["dep:serde"]
