[package]
name = "container"
version = "0.1.0"
edition = "2024"

[dependencies]
#derives
derive_more      = { version = "2.0.1", features = ["full"]}
derive_builder = "0.20.0"
derive-getters = "0.5.0"

utils =            { path = "../utils"}
container_traits = { path = "../container_traits" }
container_derive = { path = "../container_derive" }

num-traits= "0.2.15"
paste = "1.0.15"
thiserror = "2.0.12"
