[package]
name = "container_traits"
version = "0.1.0"
edition = "2024"

[dependencies]
generic-array = "1.3.5"
nalgebra = { version = "0.34", optional = true }
num-traits= "0.2.15"
paste = "1.0.15"
utils = { path="../utils" }
thiserror = "2.0.7"
typenum = "1.19.0"

[features]
nalgebra_support = ["dep:nalgebra"]
