[package]
authors = ["Markus Sprecher"]
description = "geometry"
keywords = ["geometry", "point", "vector", "transformation", "euclidean group"]
name = "geometry"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["lib"]

[dependencies]
derive_builder = "0.20.0"
derive-getters = "0.5.0"
derive_more = { version = "2.0.1", features = ["full"]}

algebra_traits           = { path="../algebra_traits" }
algebra_derive           = { path="../algebra_derive"}
algebra                  = { path="../algebra" }

container_traits         = { path="../container_traits"}
container_derive         = { path="../container_derive"}

geometry_traits          = { path="../geometry_traits" }
matrix_traits            = { path="../matrix_traits" }
matrix                   = { path="../matrix" }
matrix_wrappers          = { path="../matrix_wrappers" }
matrix_decompositions    = { path="../matrix_decompositions" }
optimization             = { path="../optimization" }

phys_units               = { path="../phys_units"} # for angle
utils                    = { path="../utils"}
vector_and_affine_spaces = { path="../vector_and_affine_spaces" }

num-traits= "0.2.15"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
splines = "5.0.0"
thiserror = "2.0.9"

num      = { version = "0.4.0" , optional = true }
nalgebra = { version = "0.33"  , optional = true, features = ["serde"] }
cgmath   = { version = "0.18.0", optional = true }

[features]
num_support      = ["dep:num"]
nalgebra_support = ["dep:nalgebra"]
cgmath_support   = ["dep:cgmath"]