[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more    = { version = "1.0.0", features = ["full"]}
derive_builder = "0.20.0"
derive-getters = "0.5.0"

num-traits = "0.2.19"
paste = "1.0.14"
algebra_traits        = { path = "../algebra_traits" }
algebra_derive        = { path = "../algebra_derive" }
algebra               = { path = "../algebra" }
utils                 = { path = "../utils" }
container_traits      = { path = "../container_traits" }
container_derive      = { path = "../container_derive" }
matrix_traits         = { path = "../matrix_traits" }
matrix_derive         = { path = "../matrix_derive" }
matrix_wrappers       = { path = "../matrix_wrappers" }
matrix_decompositions = { path = "../matrix_decompositions" }

# optional
nalgebra = { version = "0.33", optional = true}
either = "1.13.0"

[dev-dependencies]
num= "0.4.3"


[features]
default = ["nalgebra_support"]
nalgebra_support = [
    "dep:nalgebra",
    "algebra/nalgebra_support",
    "algebra_traits/nalgebra_support",
    "container_traits/nalgebra_support"]
