[package]
authors = ["Markus Sprecher"]
description = "Derive macros for traits in crate matrix_traits."
keywords = ["MatrixMut", "Matrix", "Transpose"]
name = "matrix_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.32"
syn = {version="2.0.41", features = ["full"]}
derive_helper =    { path = "../derive_helper" }

[dev-dependencies]
matrix_traits =    { path = "../matrix_traits" }
container_traits = { path = "../container_traits" }
