[package]
name = "matrix_traits"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra =          { path = "../algebra" }
algebra_traits =   { path = "../algebra_traits" }
algebra_derive =   { path = "../algebra_derive" }
container_traits = { path = "../container_traits"}
utils =            { path = "../utils" }
num-traits = "0.2.19"
paste = "1.0.14"
thiserror = "2.0.7"
derive_more = "1.0.0"

# optional
nalgebra = { version = "0.33", optional = true}
either = "1.13.0"

[dev-dependencies]
num= "0.4.3"

[features]
default = ["nalgebra_support"]
nalgebra_support = [
    "dep:nalgebra",
    "algebra/nalgebra_support",
    "algebra_traits/nalgebra_support",
    "container_traits/nalgebra_support"]
