[package]
name    = "playground"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cachingmap = "0.2.1"
itertools = "0.14.0"
algebra_derive   = { path="../algebra_derive" }
algebra_traits   = { path="../algebra_traits" }
# algebra          = { path="../algebra" }
container_derive = { path="../container_derive" }
container_traits = { path="../container_traits" }
derive_more = { version = "2.0.1", features = ["full"]}
# either = "1.12.0"
# matrix = { path="../matrix" }
# matrix_derive = { path="../matrix_derive" }
# matrix_traits = { path="../matrix_traits" }
# measurements = "0.11.0"
nalgebra = { version = "0.33"}
num-traits = "0.2.19"
paste = "1.0.15"
# phys_units = { path="../phys_units", features = ["measurements_support", "simple_si_units_support"]}
utils = { path="../utils" }
# simple-si-units = "1.1.1"
